# rust-cp-template

./: .gitignore  Cargo.toml  LICENSE  README.md  cr  cr.py  rust_bundler_cp
benches/: bench_algo.rs
rust_bundler/: .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  bump_version.py  coverage.sh  run.sh
rust_bundler/src/: lib.rs  main.rs
rust_bundler/tests/: bin.rs  golden.rs  parse_test_io.rs  validate_cargo.rs
src/: prelude.rs
src/algebra/: mod.rs  operations.rs  ring_operations.rs
src/algorithm/: automata_learning.rs  binary_search.rs  combinations.rs  convex_hull_trick.rs  doubling.rs  mo_algorithm.rs  mod.rs  number_of_increasing_sequences_between.rs  other.rs  syakutori.rs  ternary_search.rs
src/combinatorial_optimization/: mod.rs
src/data_structure/: allocator.rs  bitset.rs  mod.rs  pairing_heap.rs  range_minimum_query.rs  treap.rs
src/geometry/: mod.rs
src/graph/: adjacency_list.rs  edge_list.rs  general_weighted_matching.rs  minimum_spanning_arborescence.rs  mod.rs  order.rs  shortest_path.rs  sparse_graph.rs
src/heuristic/: beam_search.rs  mod.rs
src/math/: bitwiseand_convolve.rs  bitwiseor_convolve.rs  bitwisexor_convolve.rs  black_box_matrix.rs  discrete_logarithm.rs  floor_sum.rs  gcd.rs  gcd_convolve.rs  lcm_convolve.rs  matrix.rs  miller_rabin.rs  mod.rs  number_theoretic_transform.rs  polynomial.rs  prime.rs  prime_factors.rs  quotient_array.rs
src/num/: complex.rs  decimal.rs  double_double.rs  float.rs  integer.rs  mod.rs  quad_double.rs
src/string/: mod.rs  suffix_tree.rs
src/tools/: associated_value.rs  capture.rs  (+8 more)
(+27 files in other folders)
