[package]
name = "rust-cp-template"
version = "0.1.1"
authors = ["Mayukh Das <mayukh4321@gmail.com>"]
edition = "2024"

[lib]
name = "cp"

[[bin]]
name = "rust-cp-template"
path = "src/bin/main.rs"

[[bin]]
name = "a"
path = "src/bin/a.rs"
[[bin]]
name = "b"
path = "src/bin/b.rs"
[[bin]]
name = "c"
path = "src/bin/c.rs"
[[bin]]
name = "d"
path = "src/bin/d.rs"
[[bin]]
name = "e"
path = "src/bin/e.rs"
[[bin]]
name = "f"
path = "src/bin/f.rs"
[[bin]]
name = "g"
path = "src/bin/g.rs"
